# zipinspect

./: README.md  pyproject.toml
zipinspect/: __init__.py  __main__.py  http.py  pages.py  repl.py  utils.py  zipread.py
zipinspect/utils/: asyncio.py  misc.py  repl.py
zipinspect/zipread/: __init__.py  stubs.py
